Reduced the size of the Java installation.